Refactor code for improved performance and readability

--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -6,6 +6,12 @@
         <div class="name">
             {{ food.name }}
         </div>
+        <span class="favourite {{food.favorite? '':'not'}}">
+            ❤️
+        </span>
+        <!-- <div class="stars">
+
+        </div> -->
       </div>
     </a>
   </li>
