--- a/frontend/src/app/components/partials/search/search.component.html
+++ b/frontend/src/app/components/partials/search/search.component.html
@@ -1,1 +1,10 @@
-<p>search works!</p>
+<div>
+  <input
+    #searchInput
+    type="text"
+    placeholder="Search"
+    (keyup.enter)="search(searchInput.value)"
+    [value]="searchTerm"
+  />
+  <button (click)="search(searchInput.value)">Search</button>
+</div>
