Update CSS and HTML files for CartPageComponent

--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -33,4 +33,12 @@
       </div>
     </li>
   </ul>
+  <div class="checkout">
+    <div>
+        <div class="foods-count">{{cart.totalCount}}</div>
+        <div class="total-price">{{cart.totalPrice}} </div>
+    </div>
+
+    <a routerLink="/checkout">Proceed to Checkout</a>
+  </div>
 </div>
