--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -1,6 +1,6 @@
 <app-title title="Cart Page" margin="1.5rem 0 0 2.5rem"></app-title>
-
-<div class="container">
+<app-not-found [visible]="!cart || !cart.items.length" notFoundMessage="Cart Page is Empty" resetLinkText="Go to Homepage"></app-not-found>
+<div *ngIf="cart && cart.items.length" class="container">
   <ul>
     <li *ngFor="let cartItem of cart.items">
       <div>
@@ -17,7 +17,7 @@
           [value]="cartItem.quantity"
           (change)="changeQuantity(cartItem, quantitySelect.value)"
         >
-          <option *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+          <option *ngFor="let i of [1, 2, 3, 4, 5]">
             {{ i }}
           </option>
         </select>
