--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -1,5 +1,9 @@
 <app-search></app-search>
 <app-tags></app-tags>
+<app-not-found
+  [visible]="!foods || !foods.length"
+  resetLinkText="Reset search"
+></app-not-found>
 <ul>
   <li *ngFor="let food of foods">
     <a routerLink="/food/{{ food.id }}">
@@ -8,7 +12,8 @@
         <div class="name">
           {{ food.name }}
         </div>
-        <span class="favourite {{ food.favorite ? '' : 'not' }}"> ❤ </span>
+        <span *ngIf="food.favorite"> ❤ </span>
+        <span *ngIf="!food.favorite"> 🩶 </span>
         <div class="stars">
           <star-rating [stars]="food.stars"></star-rating>
         </div>
