--- a/frontend/src/app/components/partials/input-container/input-container.component.html
+++ b/frontend/src/app/components/partials/input-container/input-container.component.html
@@ -1,1 +1,9 @@
-<p>input-container works!</p>
+<div class="container" [ngStyle]="{ 'background-color': bgColor }">
+    <label>
+        {{label}}
+    </label>
+
+    <div class="content">
+        <ng-content></ng-content>
+    </div>
+</div>
