Refactor code and add user registration functionality

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -4,7 +4,7 @@
     <nav>
       <ul>
         <li *ngIf="!isAuth">
-          <a routerLink="/login">Login</a>
+          <a routerLink="/login" [queryParams]="{ returnUrl: returnUrl }">Login</a>
         </li>
         <li *ngIf="isAuth" class="menu-container">
           <a  routerLink="/dashbord">{{user.name}}</a>
