--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
@@ -10,6 +10,7 @@
 
   <div class="map">
     <app-title title="Chooese Your adress On Map" fontSize="1.6rem"></app-title>
+    <map [order]="order"></map>
   </div>
 
   <div class="buttons-container">
