Update user , issue- logout when update info. And not cheking the token befor updating user

--- a/frontend/src/app/components/pages/register-page/register-page.component.html
+++ b/frontend/src/app/components/pages/register-page/register-page.component.html
@@ -7,8 +7,7 @@
         [showErrorsWhen]="isSubmitted"
         label="Name"
       >
-        `</text-input
-      >
+        `</text-input>
 
       <text-input
         [control]="fc.email"
