--- a/frontend/src/app/components/pages/profile/profile.component.html
+++ b/frontend/src/app/components/pages/profile/profile.component.html
@@ -1,1 +1,85 @@
-<p>profile works!</p>
+<div class="container">
+  <div class="propic">
+    <img
+      src="../../../../assets/user.png"
+      alt="profile picture"
+      width="50px"
+      height="50px"
+    />
+    <h2></h2>
+  </div>
+  <div class="content" *ngIf="isEditting">
+    <app-title title="Update Details"></app-title>
+    <form [formGroup]="registerForm" (ngSubmit)="submit()">
+      <text-input
+        [control]="fc.name"
+        [showErrorsWhen]="isSubmitted"
+        label="Name"
+      >
+        `</text-input
+      >
+
+      <text-input
+        [control]="fc.email"
+        [showErrorsWhen]="isSubmitted"
+        label="Email"
+        type="email"
+      >
+        `</text-input
+      >
+
+      <text-input
+        [control]="fc.address"
+        [showErrorsWhen]="isSubmitted"
+        label="Address"
+      >
+        `</text-input
+      >
+
+      <default-button text="Update"></default-button>
+    </form>
+  </div>
+
+  <div class="content" *ngIf="!isEditting">
+    <h2>User Details</h2>
+    <form>
+      <div class="form-group">
+        <label for="name">Name: </label>
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          [value]="userName"
+          disabled
+        />
+      </div>
+      <div class="form-group">
+        <label for="email">Email: </label>
+        <input
+          type="email"
+          class="form-control"
+          id="email"
+          [value]="userEmail"
+          disabled
+        />
+      </div>
+      <div class="form-group">
+        <label for="phone">Address: </label>
+        <input
+          type="text"
+          class="form-control"
+          id="Address"
+          [value]="userAddress"
+          disabled
+        />
+      </div>
+    </form>
+  </div>
+
+  <div class="btn" *ngIf="!isEditting">
+    <button (click)="edit()">Edit</button>
+  </div>
+  <div class="btn" *ngIf="isEditting">
+    <button (click)="cancel()">Cancel</button>
+  </div>
+</div>
