--- a/frontend/src/app/components/pages/food-page/food-page.component.html
+++ b/frontend/src/app/components/pages/food-page/food-page.component.html
@@ -1,44 +1,46 @@
-<app-not-found [visible]="!food" notFoundMessage="Item not found" resetLinkText="Back to home"></app-not-found>
-<div class="container" *ngIf="food.id">
+<app-not-found
+  [visible]="!food"
+  notFoundMessage="Item not found"
+  resetLinkText="Back to home"
+></app-not-found>
+<div class="container" *ngIf="food">
   <img [src]="food.imageUrl" [alt]="food.name" />
   <div class="details">
-    
     <div class="header">
       <span class="name">
         {{ food.name }}
       </span>
       <span class="favourite {{ food.favorite ? '' : 'not' }}"> ❤ </span>
     </div>
-    
+
     <div class="rating">
       <star-rating [stars]="food.stars"></star-rating>
     </div>
-    
+
     <div class="origins">
-        <span *ngFor="let origin of food.origins">
-          {{ origin }}
-        </span>
+      <span *ngFor="let origin of food.origins">
+        {{ origin }}
+      </span>
     </div>
 
     <div class="tags">
-        <a *ngFor="let tag of food.tags" [routerLink]="['/tag', tag]">
-          {{ tag }}
-        </a>
+      <a *ngFor="let tag of food.tags" [routerLink]="['/tag', tag]">
+        {{ tag }}
+      </a>
     </div>
 
     <div class="cook-time">
-        <span>
-            Time to cook about <strong>{{ food.cookTime }}</strong> minutes
-        </span>
+      <span>
+        Time to cook about <strong>{{ food.cookTime }}</strong> minutes
+      </span>
     </div>
 
     <div class="price">
-        <span>
-            {{ food.price | currency }}
-        </span>
+      <span>
+        {{ food.price | currency }}
+      </span>
     </div>
 
     <button (click)="addToCart()">Add to Cart</button>
-
   </div>
 </div>
