--- a/frontend/src/app/components/partials/loading/loading.component.css
+++ b/frontend/src/app/components/partials/loading/loading.component.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: #ffffffea;
+    background-color: #ffffff;
     z-index: 1000;
 }
 
